customers-api/deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customers-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: customers-api
  template:
    metadata:
      labels:
        tier: backend
        app: customers-api
    spec:
      containers:
      - name: customers-api
        image: gcr.io/mvillarreal-tpo-challenge/customers-api:8865b4dc087e902e6d9cf447bbf0b052c666d9e7
        imagePullPolicy: Always
        volumeMounts:
          - name: config-volume
            mountPath: /app/application.properties
            subPath: application.properties
        ports:
          - containerPort:  8080
            name: api-port
            protocol: TCP
        resources:
          requests:
            memory: "128Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
          initialDelaySeconds: 3
      volumes:
        - name: config-volume
          configMap:
            name: customers-api
      imagePullSecrets:
      - name: gcr-json-key
