customers-api/deploy/service.yaml
kind: Service
apiVersion: v1
metadata:
  name:  customers-api
  labels:
    app: customers-api
    tier: backend
spec:
  selector:
    app: customers-api
  type: LoadBalancer
  loadBalancerIP: "35.188.72.154"
  ports:
  - name: customers-api-port
    port:  8080
    targetPort: 8080
